# ai-security-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DIR-ATTACK-TREE-FABRIC-AGENT-ACTION-o1.md  DIR-SEC-DESIGN-FABRIC-AGENT-ACTION-o1.md  DIR-VULNERABILITIES-WORKFLOW-1-django-unicorn-gemini-2.0-flash-thinking-exp-0.7.md  DIR-VULNERABILITIES-WORKFLOW-1-django-unicorn-many-models-4.md  DIR-VULNERABILITIES-WORKFLOW-1-django-unicorn-many-models.md  DIR-VULNERABILITIES-WORKFLOW-1-screenshot-to-code-gemini-2.0-flash-thinking-exp-0.7.md  DIR-VULNERABILITIES-django-unicorn-gemini-2.0-flash-thinking-exp-0.7.md  DIR-VULNERABILITIES-django-unicorn-o1-1.md  DIR-VULNERABILITIES-django-unicorn-o3-mini-1.md  DIR-VULNERABILITIES-workflow-1-django-unicorn-rce-with-o1.md  DIR-VULNERABILITIES-workflow-1-django-unicorn-rce.md  DIR-VULNERABILITIES-workflow-1-django-unicorn-with-o1.md  DIR-v2-VULNERABILITIES-django-unicorn-gemini-2.0-flash-thinking-exp-0.7.md  DIR-v2-VULNERABILITIES-django-unicorn-o3-mini-1.md  DIR-v3-VULNERABILITIES-django-unicorn-gemini-2.0-flash-thinking-exp-0.7.md  DIR-v4-VULNERABILITIES-django-unicorn-gemini-2.0-flash-thinking-exp-0.7.md  Dockerfile  README.md  build.sh  create_examples.sh  entrypoint.sh  fag-gpt-4o.md  list_org_repos_per_org.sh  mypy.ini  org.txt  package-lock.json  package.json  pyproject.toml  repos.json  repos_django.txt  repos_vscode.txt  validateMermaid.js
ai_create_project_sec_design/: agent_builder.py  agents.py  app.py  base_agent.py  config.py  constants.py  dry_run.py  graphs.py  llms.py  markdowns.py
ai_security_analyzer/: agents.py  (+31 more)
(+1836 files in other folders)
